fixed problems issues from mentor